tools/architecture/validate-source-imports/tests/fixtures/invalid/package-deep-src-import-invalid/src/index.ts
import something from "@platform/domain-core/src/internal";
export { something };
